# NemoScribe

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  V2_TEST_REPORT.md  __init__.py  nemoscribe.py  pyproject.toml
docs/: TUNING_GUIDE.md  vad-long-segment-analysis.md
docs/plans/: 2025-12-13-modularization-design.md  2025-12-13-modularization-progress.md  2025-12-14-param-benchmark-design.md
nemoscribe/: __init__.py  __main__.py  audio.py  cli.py  config.py  llm_postprocess.py  log_utils.py  postprocess.py  srt.py  transcriber.py  vad.py
scripts/: analyze_quality.py  analyze_srt_stats.py  check_cuda.py  evaluate_benchmark.py  find_longest_segment.py
tests/: test_improvements.py
