[project]
name = "nemoscribe"
version = "0.4.0"
description = "Convert video files to SRT subtitles using NVIDIA NeMo ASR models with accurate timestamps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.11,<2.12",
    "nemo_toolkit[asr]>=2.7.2,<2.8",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "onnx<1.18",
]

[project.optional-dependencies]
# ITN (Inverse Text Normalization) for converting spoken forms to written forms
# e.g., "twenty five dollars" -> "$25"
# Note: pynini dependency can be tricky to install on some systems
itn = ["nemo_text_processing>=1.1.0"]
# Benchmark evaluation tools
benchmark = ["jiwer>=3.1,<4"]
# LLM post-processing for fixing transcription errors
llm = ["anthropic>=0.88.0,<1", "openai>=2.30.0,<3", "python-dotenv>=1.2.2,<2", "json-repair>=0.58.7,<1"]
# All optional features
all = ["nemo_text_processing>=1.1.0", "jiwer>=3.1,<4", "anthropic>=0.88.0,<1", "openai>=2.30.0,<3", "python-dotenv>=1.2.2,<2", "json-repair>=0.58.7,<1"]


[project.scripts]
nemoscribe = "nemoscribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

# Pin transitive dependencies for NeMo compatibility (see CLAUDE.md)
[tool.uv]
constraint-dependencies = [
    "transformers>=4.57,<4.58",
    "numpy<2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# F401: imported but unused - intentional for availability checks
"tests/test_improvements.py" = ["F401"]
